Added additional pages and tests.

--- a/plant-system/client/src/i18n/locales/en/translation.json
+++ b/plant-system/client/src/i18n/locales/en/translation.json
@@ -8,7 +8,40 @@
     "save": "Save",
     "close": "Close",
     "back": "Back",
-    "next": "Next"
+    "next": "Next",
+    "email": "Email",
+    "password": "Password",
+    "confirmPassword": "Confirm Password",
+    "fullName": "Full Name",
+    "required": "Required field",
+    "success": "Success",
+    "error": "Error",
+    "loading": "Loading..."
+  },
+  "auth": {
+    "login": "Login",
+    "loginTitle": "Login to your account",
+    "register": "Register",
+    "registerTitle": "Create an account",
+    "forgotPassword": "Forgot Password",
+    "forgotPasswordTitle": "Reset your password",
+    "resetPassword": "Reset Password",
+    "resetPasswordTitle": "Create new password",
+    "changePassword": "Change Password",
+    "changePasswordTitle": "Update your password",
+    "logout": "Logout",
+    "rememberMe": "Remember me",
+    "passwordRequirements": "Password must be at least 6 characters long",
+    "passwordMatch": "Passwords must match",
+    "passwordChanged": "Password changed successfully",
+    "resetEmailSent": "Password reset email sent",
+    "resetSuccess": "Password reset successful",
+    "registerSuccess": "Registration successful",
+    "continueWithGoogle": "Continue with Google",
+    "orLoginWith": "or login with",
+    "alreadyHaveAccount": "Already have an account?",
+    "dontHaveAccount": "Don't have an account?",
+    "goToLogin": "Back to login"
   },
   "navigation": {
     "home": "Home",
@@ -20,7 +53,10 @@
     "upgrade": "Upgrade",
     "login": "Login",
     "logout": "Logout",
-    "profile": "Profile"
+    "profile": "Profile",
+    "register": "Register",
+    "changePassword": "Change Password",
+    "forgotPassword": "Forgot Password"
   },
   "zones": {
     "title": "Manage Multiple Plant Zones",
