--- a/plant-system/client/src/i18n/locales/vi/translation.json
+++ b/plant-system/client/src/i18n/locales/vi/translation.json
@@ -8,7 +8,40 @@
     "save": "Lưu",
     "close": "Đóng",
     "back": "Quay lại",
-    "next": "Tiếp theo"
+    "next": "Tiếp theo",
+    "email": "Email",
+    "password": "Mật khẩu",
+    "confirmPassword": "Xác nhận mật khẩu",
+    "fullName": "Họ và tên",
+    "required": "Trường bắt buộc",
+    "success": "Thành công",
+    "error": "Lỗi",
+    "loading": "Đang tải..."
+  },
+  "auth": {
+    "login": "Đăng nhập",
+    "loginTitle": "Đăng nhập vào tài khoản",
+    "register": "Đăng ký",
+    "registerTitle": "Tạo tài khoản mới",
+    "forgotPassword": "Quên mật khẩu",
+    "forgotPasswordTitle": "Đặt lại mật khẩu",
+    "resetPassword": "Đặt lại mật khẩu",
+    "resetPasswordTitle": "Tạo mật khẩu mới",
+    "changePassword": "Đổi mật khẩu",
+    "changePasswordTitle": "Cập nhật mật khẩu",
+    "logout": "Đăng xuất",
+    "rememberMe": "Ghi nhớ đăng nhập",
+    "passwordRequirements": "Mật khẩu phải có ít nhất 6 ký tự",
+    "passwordMatch": "Mật khẩu không khớp",
+    "passwordChanged": "Đổi mật khẩu thành công",
+    "resetEmailSent": "Email đặt lại mật khẩu đã được gửi",
+    "resetSuccess": "Đặt lại mật khẩu thành công",
+    "registerSuccess": "Đăng ký thành công",
+    "continueWithGoogle": "Tiếp tục với Google",
+    "orLoginWith": "hoặc đăng nhập bằng",
+    "alreadyHaveAccount": "Đã có tài khoản?",
+    "dontHaveAccount": "Chưa có tài khoản?",
+    "goToLogin": "Quay lại đăng nhập"
   },
   "navigation": {
     "home": "Trang chủ",
@@ -20,7 +53,10 @@
     "upgrade": "Nâng cấp",
     "login": "Đăng nhập",
     "logout": "Đăng xuất",
-    "profile": "Hồ sơ"
+    "profile": "Hồ sơ",
+    "register": "Đăng ký",
+    "changePassword": "Đổi mật khẩu",
+    "forgotPassword": "Quên mật khẩu"
   },
   "zones": {
     "title": "Quản lý nhiều khu vườn",
